implement GetCriticalFile use case and some improvements